Added more images and CSS styling.

--- a/contact.html
+++ b/contact.html
@@ -6,19 +6,19 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
 </head>
 <body>
-	<header>
+	<div>
 		<div class="heading">
 			<h1>Ryan Van Dongen</h1>
 		</div>
-		<nav class="navbar">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="merch.html">Merch</a></li>
-				<li><a class="focus" href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
+	</div>
+	<div class="navbar">
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
+			<li><a href="merch.html">Merch</a></li>
+			<li><a class="focus" href="contact.html">Contact</a></li>
+		</ul>
+	</div>
 	<div class="heroimage3">
 		<img class="heroimage2" src="images/ship.jpg">
 
@@ -37,8 +37,10 @@
 				<label for="message">Message *</label>
 				<textarea id="message"></textarea>
 				<br>
-				<input type="submit" name="submit">
+				<input type="submit" name="submit" class="button">
 			</form>
+			<br />
+			Or find me on <a href="https://www.instagram.com/ryanvandongen/">Instagram</a>, <a href="https://www.youtube.com/channel/UCLQk-Rgh7WLd8LrzA7SYqYg?view_as=subscriber">Youtube</a>, <a href="https://www.redbubble.com/people/ryanvandongen/portfolio">Redbubble</a>, <a href="https://www.artstation.com/ryan">Artstation</a>, <a href="https://www.facebook.com/ryan.vandongen1">Facebook</a>, and <a href="https://twitter.com/ryanjvandongen?lang=en">Twitter</a>.
 		</div>
 	</div>
 	<footer>
