--- a/merch.html
+++ b/merch.html
@@ -6,50 +6,43 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
 </head>
 <body>
-	<header>
+	<div>
 		<div class="heading">
 			<h1>Ryan Van Dongen</h1>
 		</div>
-		<nav class="navbar">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a class="focus" href="merch.html">Merch</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
+	</div>
+	<div class="navbar">
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
+			<li><a class="focus" href="merch.html">Merch</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</div>
 	<div class="heroimage3">
 		<img class="heroimage2" src="images/chicken.jpg">
 
 		<div class="textoverlay">Merch</div>
 
 	</div>
+	<div class="section2">
+		<div class="contact">
+			<h2>Get exclusive prints, apparel, home decor, and tech cases and skins from my shop on <a href="https://www.redbubble.com/people/ryanvandongen/shop?asc=u">Redbubble</a>.</h2>
+		</div>
+	</div>
 	<div class="section">
 
 		<div class="merch">
 			<ul>
-				<li><img src="images/t-shirt.jpg" width="50%"></li>
+				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop/acrylic-blocks?accordion=product&cat_context=u-decor&ref=artist_shop_product_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/acrylic.jpg" width="400px"><br />Shop Acrylic Blocks</a></li>
+				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop/prints?accordion=department&ref=artist_shop_department_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/artboard.jpg" width="400px"><br />Shop Art Prints</a></li>
+				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop/home-decor?accordion=department&ref=artist_shop_department_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/pillow2.jpg" width="400px"><br />Shop Home Decor</a></li>
+				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop?ref=artist_shop_category_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/t-shirt.jpg" width="400px"><br />Shop Apparel and More</a></li>
 			</ul>
-
+			<div class="caption"></div>
 		</div>
 	</div>
 
-	<div class="section2">
-		<div class="contact">
-			<h3>Contact Me</h3>
-			<h2>Get in Touch!</h2>
-			<form>
-				<label for="email">Email Address *</label>
-				<input type="text" name="Email Address" id="email">
-				<br>
-				<label for="message">Message *</label>
-				<textarea id="message"></textarea>
-				<br>
-				<input type="submit" name="submit">
-			</form>
-		</div>
-	</div>
 	<footer>
 		
 	</footer>
