--- a/portfolio.html
+++ b/portfolio.html
@@ -6,19 +6,19 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
 </head>
 <body>
-	<header>
+	<div>
 		<div class="heading">
 			<h1>Ryan Van Dongen</h1>
 		</div>
-		<nav class="navbar">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a class="focus" href="portfolio.html">Portfolio</a></li>
-				<li><a href="merch.html">Merch</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
+	</div>
+	<div class="navbar">
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a class="focus" href="portfolio.html">Portfolio</a></li>
+			<li><a href="merch.html">Merch</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</div>
 	<div class="heroimage3">
 		<img class="heroimage2" src="images/dragon-header2.jpg">
 
@@ -29,38 +29,87 @@
 
 		<div class="row">
 			<ul>
-				<li><img src="images/1.jpg"></li>
-				<li><img src="images/2.jpg"></li>
-				<li><img src="images/3.jpg"></li>
+				<li><a href="#i1" class="thumbnail"><img src="images/1.jpg"></a></li>
+				<li><a href="#i2" class="thumbnail"><img src="images/2.jpg"></a></li>
+				<li><a href="#i3" class="thumbnail"><img src="images/3.jpg"></a></li>
 			</ul>
 			<ul>
-				<li><img src="images/4.jpg"></li>
-				<li><img src="images/5.jpg"></li>
-				<li><img src="images/6.jpg"></li>
+				<li><a href="#i4" class="thumbnail"><img src="images/4.jpg"></a></li>
+				<li><a href="#i5" class="thumbnail"><img src="images/5.jpg"></a></li>
+				<li><a href="#i6" class="thumbnail"><img src="images/6.jpg"></a></li>
 			</ul>
 			<ul>
-				<li><img src="images/7.jpg"></li>
-				<li><img src="images/8.jpg"></li>
-				<li><img src="images/9.jpg"></li>
+				<li><a href="#i7" class="thumbnail"><img src="images/7.jpg"></a></li>
+				<li><a href="#i8" class="thumbnail"><img src="images/8.jpg"></a></li>
+				<li><a href="#i9" class="thumbnail"><img src="images/9.jpg"></a></li>
+			</ul>
+			<ul>
+				<li><a href="#i10" class="thumbnail"><img src="images/10.jpg"></a></li>
+				<li><a href="#i11" class="thumbnail"><img src="images/11.jpg"></a></li>
+				<li><a href="#i12" class="thumbnail"><img src="images/12.jpg"></a></li>
 			</ul>
 		</div>
 	</div>
-
+	<a href="#_" class="lightbox" id="i1">
+  		<img src="images/i1.jpg">
+	</a>
+	<a href="#_" class="lightbox" id="i2">
+  		<img src="images/i2.jpg">
+	</a>
+	<a href="#_" class="lightbox" id="i3">
+  		<img src="images/i3.png">
+	</a>
+	<a href="#_" class="lightbox" id="i4">
+  		<img src="images/i4.jpg">
+	</a>
+	<a href="#_" class="lightbox" id="i5">
+  		<img src="images/i5.jpg">
+	</a>
+	<a href="#_" class="lightbox" id="i6">
+  		<img src="images/i6.png">
+	</a>
+	<a href="#_" class="lightbox" id="i7">
+  		<img src="images/i7.jpg">
+	</a>
+	<a href="#_" class="lightbox" id="i8">
+  		<img src="images/i8.png">
+	</a>
+	<a href="#_" class="lightbox" id="i9">
+  		<img src="images/i9.jpg">
+	</a>
+		<a href="#_" class="lightbox" id="i10">
+  		<img src="images/i10.jpg">
+	</a>
+	</a>
+		<a href="#_" class="lightbox" id="i11">
+  		<img src="images/i11.png">
+	</a>
+	</a>
+		<a href="#_" class="lightbox" id="i12">
+  		<img src="images/i12.jpg">
+	</a>
 	<div class="section2">
-		<div class="contact">
-			<h3>Contact Me</h3>
-			<h2>Get in Touch!</h2>
-			<form>
-				<label for="email">Email Address *</label>
-				<input type="text" name="Email Address" id="email">
-				<br>
-				<label for="message">Message *</label>
-				<textarea id="message"></textarea>
-				<br>
-				<input type="submit" name="submit">
-			</form>
+		<div class="row">
+			<h3>Resume</h3>
+			<div class="resume">
+				<ul>
+					<li class="job"><h4>Nexus Shift Studios</h4></li>
+					<li class="desc">Concept Artist and Illustrator - 2016 to Present</li>
+				</ul>
+				<ul>
+					<li class="job"><h4>Connectify, Inc.</h4></li>
+					<li class="desc">Multimedia Developer - 2016 - 2017, <br />2017 to Present</li>
+				</ul>
+				<ul>
+					<li class="job"><h4>Cogwright Games</h4></li>
+					<li class="desc">Illustrator - 2017 to Present</li>
+				</ul>
+				<ul>
+					<li class="job"><h4>Ironsoul Legion</h4></li>
+					<li class="desc">Illustrator - 2017 to Present</li>
+				</ul>
+			</div>
 		</div>
-	</div>
 	<footer>
 		
 	</footer>
