Downsized some images and localized fonts

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 		<div class="contact">
 			<h3>Contact Me</h3>
 			<h2>Get in Touch!</h2>
-			<form>
+			<form class="form">
 				<label for="email">Email Address *</label>
 				<input type="text" name="Email Address" id="email">
 				<br>
