--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<p>I am a concept artist and illustrator based in Philadelphia, PA, and currently attending Drexel 	University. </p>
 				<p>Check me out on <a href="https://www.instagram.com/ryanvandongen/">Instagram</a>, <a href="https://www.youtube.com/channel/UCLQk-Rgh7WLd8LrzA7SYqYg?view_as=subscriber">Youtube</a>, <a href="https://www.redbubble.com/people/ryanvandongen/portfolio">Redbubble</a>, <a href="https://www.artstation.com/ryan">Artstation</a>, <a href="https://www.facebook.com/ryan.vandongen1">Facebook</a>, and <a href="https://twitter.com/ryanjvandongen?lang=en">Twitter</a>.</p>
 			</div>
-			<div class="narrow">
+			<div class="narrowimages">
 				<img src="images/prof.jpeg" class="prof">	
 			</div>
 		</div>
@@ -45,8 +45,8 @@
 				<p><a href="https://www.youtube.com/watch?v=xR0_2yISfHs">See the making of the Angry Robot on Youtube</a></p>
 				<a href="portfolio.html" class="button">View Portfolio</a>
 			</div>
-			<div class="wide">
-				<div class="row">
+			<div class="wideimages">
+				<div class="rowright">
 					<ul>
 						<li><a href="#i1" class="thumbnail"><img src="images/1.jpg" width="150"></a></li>
 						<li><a href="#i2" class="thumbnail"><img src="images/2.jpg" width="150"></a></li>
