Final edits, validating code, comments

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,14 @@
 	<div>
 		<div class="heading">
 			<h1>Ryan Van Dongen</h1>
+			<div class="icons">
+				<ul class="social">
+					<li><a href="instagram.com/ryanvandongen/" target="_blank"><img src="images/icon-ig.png" width="20" alt="Instagram"></a></li>
+					<li><a href="artstation.com/ryan" target="_blank"><img src="images/icon-as.png" width="20" alt="Artstation"></a></li>
+					<li><a href="merch.html" target="_blank"><img src="images/icon-fb.png" width="20" alt="Facebook"></a></li>
+					<li><a href="contact.html" target="_blank"><img src="images/icon-twitter.png" width="20" alt="Twitter"></a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div class="navbar">
@@ -20,7 +28,7 @@
 		</ul>
 	</div>
 	<div class="heroimage3">
-		<img class="heroimage2" src="images/ship.jpg">
+		<img class="heroimage2" src="images/ship.jpg" alt="Spaceship cropped hero image">
 
 		<div class="textoverlay">Contact</div>
 
