--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 	<div>
 		<div class="heading">
 			<h1>Ryan Van Dongen</h1>
+			<div class="icons">
+				<ul class="social">
+					<li><a href="index.html"><img src="images/icon-ig.png" width="20" alt="Instagram"></a></li>
+					<li><a href="portfolio.html"><img src="images/icon-as.png" width="20" alt="Artstation"></a></li>
+					<li><a href="merch.html"><img src="images/icon-fb.png" width="20" alt="Facebook"></a></li>
+					<li><a href="contact.html"><img src="images/icon-twitter.png" width="20" alt="Twitter"></a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div class="navbar">
@@ -21,7 +29,7 @@
 	</div>
 	<div class="hero">
 		<div class="heroimage">
-			<img src="images/hero.jpg">
+			<img src="images/hero.jpg" alt="Large Hero image showing part of A Quiet Winter artwork">
 			<div class="textright">A Quiet Winter - Artwork from 2016</div>
 		</div>
 	</div>
@@ -33,7 +41,7 @@
 				<p>Check me out on <a href="https://www.instagram.com/ryanvandongen/">Instagram</a>, <a href="https://www.youtube.com/channel/UCLQk-Rgh7WLd8LrzA7SYqYg?view_as=subscriber">Youtube</a>, <a href="https://www.redbubble.com/people/ryanvandongen/portfolio">Redbubble</a>, <a href="https://www.artstation.com/ryan">Artstation</a>, <a href="https://www.facebook.com/ryan.vandongen1">Facebook</a>, and <a href="https://twitter.com/ryanjvandongen?lang=en">Twitter</a>.</p>
 			</div>
 			<div class="narrowimages">
-				<img src="images/prof.jpeg" class="prof">	
+				<img src="images/prof.jpeg" class="prof" alt="A photo of me">	
 			</div>
 		</div>
 	</div>
@@ -42,55 +50,72 @@
 			<div class="narrow">
 				<h3>Portfolio</h3>
 				<h2>Recent Projects</h2>
-				<p><a href="https://www.youtube.com/watch?v=xR0_2yISfHs">See the making of the Angry Robot on Youtube</a></p>
+				<p>
+					<a href="https://www.youtube.com/watch?v=xR0_2yISfHs">See the making of the Angry Robot on Youtube</a>
+				</p>
 				<a href="portfolio.html" class="button">View Portfolio</a>
 			</div>
 			<div class="wideimages">
 				<div class="rowright">
+
+					<!--Image Thumbnails-->
 					<ul>
-						<li><a href="#i1" class="thumbnail"><img src="images/1.jpg" width="150"></a></li>
-						<li><a href="#i2" class="thumbnail"><img src="images/2.jpg" width="150"></a></li>
-						<li><a href="#i3" class="thumbnail"><img src="images/3.jpg" width="150"></a></li>
+						<li>
+							<a href="#i1" class="thumbnail"><img src="images/1.jpg" width="150" alt="Evo"></a>
+						</li>
+						<li>
+							<a href="#i2" class="thumbnail"><img src="images/2.jpg" width="150" alt="Unicorn"></a>
+						</li>
+						<li>
+							<a href="#i3" class="thumbnail"><img src="images/3.jpg" width="150" alt="Giant"></a>
+						</li>
 					</ul>
 					<ul>
-						<li><a href="#i4" class="thumbnail"><img src="images/4.jpg" width="150"></a></li>
-						<li><a href="#i5" class="thumbnail"><img src="images/5.jpg" width="150"></a></li>
-						<li><a href="#i6" class="thumbnail"><img src="images/6.jpg" width="150"></a></li>
+						<li>
+							<a href="#i4" class="thumbnail"><img src="images/4.jpg" width="150" alt="Car"></a>
+						</li>
+						<li>
+							<a href="#i5" class="thumbnail"><img src="images/5.jpg" width="150" alt="Spaceship"></a>
+						</li>
+						<li>
+							<a href="#i6" class="thumbnail"><img src="images/6.jpg" width="150" alt="Chicken"></a>
+						</li>
 					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
+	<!--Hidden Images to appear as Lightboxes-->
 	<a href="#_" class="lightbox" id="i1">
-  		<img src="images/i1.jpg">
+  		<img src="images/i1.jpg" alt="Evo">
 	</a>
 	<a href="#_" class="lightbox" id="i2">
-  		<img src="images/i2.jpg">
+  		<img src="images/i2.jpg" alt="Unicorn">
 	</a>
 	<a href="#_" class="lightbox" id="i3">
-  		<img src="images/i3.png">
+  		<img src="images/i3.png" alt="Giant">
 	</a>
 	<a href="#_" class="lightbox" id="i4">
-  		<img src="images/i4.jpg">
+  		<img src="images/i4.jpg" alt="Car">
 	</a>
 	<a href="#_" class="lightbox" id="i5">
-  		<img src="images/i5.jpg">
+  		<img src="images/i5.jpg" alt="Spaceship">
 	</a>
 	<a href="#_" class="lightbox" id="i6">
-  		<img src="images/i6.png">
+  		<img src="images/i6.png" alt="Chicken">
 	</a>
+
+	<!--Contact Section, with a mailto button pointed at my email address-->
 	<div class="section">
 		<div class="contact2">
 			<div class="contactform">
-			<h3>Contact Me</h3>
-			<h2>Get in Touch!</h2>
+				<h3>Contact Me</h3>
+				<h2>Get in Touch!</h2>
 				<div>
 					<a href="mailto:ryanvdon@gmail.com" class="button">Send Me an Email</a>
 				</div>
 			</div>
 		</div>
-	</section>
-	<footer>
-		
-	</footer>
+	</div>
 </body>
 </html>
