--- a/merch.html
+++ b/merch.html
@@ -9,6 +9,14 @@
 	<div>
 		<div class="heading">
 			<h1>Ryan Van Dongen</h1>
+			<div class="icons">
+				<ul class="social">
+					<li><a href="instagram.com/ryanvandongen/"><img src="images/icon-ig.png" width="20" alt="Instagram"></a></li>
+					<li><a href="portfolio.html"><img src="images/icon-as.png" width="20" alt="Artstation"></a></li>
+					<li><a href="merch.html"><img src="images/icon-fb.png" width="20" alt="Facebook"></a></li>
+					<li><a href="contact.html"><img src="images/icon-twitter.png" width="20" alt="Twitter"></a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div class="navbar">
@@ -20,7 +28,7 @@
 		</ul>
 	</div>
 	<div class="heroimage3">
-		<img class="heroimage2" src="images/chicken.jpg">
+		<img class="heroimage2" src="images/chicken.jpg" alt="Chicken cropped hero image">
 
 		<div class="textoverlay">Merch</div>
 
@@ -30,14 +38,14 @@
 			<h2>Get exclusive prints, apparel, home decor, and tech cases and skins from my shop on <a href="https://www.redbubble.com/people/ryanvandongen/shop?asc=u">Redbubble</a>.</h2>
 		</div>
 	</div>
+	<!--Section that displays clickable images of merchandise-->
 	<div class="section">
-
 		<div class="merch">
 			<ul>
-				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop/acrylic-blocks?accordion=product&cat_context=u-decor&ref=artist_shop_product_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/acrylic.jpg" width="400px"><br />Shop Acrylic Blocks</a></li>
-				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop/prints?accordion=department&ref=artist_shop_department_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/artboard.jpg" width="400px"><br />Shop Art Prints</a></li>
-				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop/home-decor?accordion=department&ref=artist_shop_department_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/pillow2.jpg" width="400px"><br />Shop Home Decor</a></li>
-				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop?ref=artist_shop_category_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/t-shirt.jpg" width="400px"><br />Shop Apparel and More</a></li>
+				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop/acrylic-blocks?accordion=product&cat_context=u-decor&ref=artist_shop_product_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/acrylic.jpg" alt="Acrylic Blocks" width="400"><br />Shop Acrylic Blocks</a></li>
+				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop/prints?accordion=department&ref=artist_shop_department_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/artboard.jpg" alt="Small Art Print" width="400"><br />Shop Art Prints</a></li>
+				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop/home-decor?accordion=department&ref=artist_shop_department_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/pillow2.jpg" alt="Throw Pillow" width="400"><br />Shop Home Decor</a></li>
+				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop?ref=artist_shop_category_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/t-shirt.jpg" alt="T-Shirt" width="400"><br />Shop Apparel and More</a></li>
 			</ul>
 			<div class="caption"></div>
 		</div>
