--- a/portfolio.html
+++ b/portfolio.html
@@ -6,11 +6,21 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
 </head>
 <body>
+	<!--Header-->
 	<div>
 		<div class="heading">
 			<h1>Ryan Van Dongen</h1>
+			<div class="icons">
+				<ul class="social">
+					<li><a href="index.html"><img src="images/icon-ig.png" width="20" alt="Instagram"></a></li>
+					<li><a href="portfolio.html"><img src="images/icon-as.png" width="20" alt="Artstation"></a></li>
+					<li><a href="merch.html"><img src="images/icon-fb.png" width="20" alt="Facebook"></a></li>
+					<li><a href="contact.html"><img src="images/icon-twitter.png" width="20" alt="Twitter"></a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
+	<!--Navbar-->
 	<div class="navbar">
 		<ul>
 			<li><a href="index.html">Home</a></li>
@@ -19,75 +29,77 @@
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</div>
+	<!--Hero Image-->
 	<div class="heroimage3">
-		<img class="heroimage2" src="images/dragon-header2.jpg">
+		<img class="heroimage2" src="images/dragon-header2.jpg" alt="Dragon cropped hero image">
 
 		<div class="textoverlay">Portfolio</div>
 
 	</div>
 	<div class="section">
-
+		<!--Image Thumbnails-->
 		<div class="row">
 			<ul>
-				<li><a href="#i1" class="thumbnail"><img src="images/1.jpg"></a></li>
-				<li><a href="#i2" class="thumbnail"><img src="images/2.jpg"></a></li>
-				<li><a href="#i3" class="thumbnail"><img src="images/3.jpg"></a></li>
+				<li><a href="#i1" class="thumbnail"><img src="images/1.jpg" alt="Evo"></a></li>
+				<li><a href="#i2" class="thumbnail"><img src="images/2.jpg" alt="Unicorn"></a></li>
+				<li><a href="#i3" class="thumbnail"><img src="images/3.jpg" alt="Passing Giant"></a></li>
 			</ul>
 			<ul>
-				<li><a href="#i4" class="thumbnail"><img src="images/4.jpg"></a></li>
-				<li><a href="#i5" class="thumbnail"><img src="images/5.jpg"></a></li>
-				<li><a href="#i6" class="thumbnail"><img src="images/6.jpg"></a></li>
+				<li><a href="#i4" class="thumbnail"><img src="images/4.jpg" alt="Car"></a></li>
+				<li><a href="#i5" class="thumbnail"><img src="images/5.jpg" alt="Spaceship"></a></li>
+				<li><a href="#i6" class="thumbnail"><img src="images/6.jpg" alt="Chicken"></a></li>
 			</ul>
 			<ul>
-				<li><a href="#i7" class="thumbnail"><img src="images/7.jpg"></a></li>
-				<li><a href="#i8" class="thumbnail"><img src="images/8.jpg"></a></li>
-				<li><a href="#i9" class="thumbnail"><img src="images/9.jpg"></a></li>
+				<li><a href="#i7" class="thumbnail"><img src="images/7.jpg" alt="Dragon"></a></li>
+				<li><a href="#i8" class="thumbnail"><img src="images/8.jpg" alt="Dragon Head"></a></li>
+				<li><a href="#i9" class="thumbnail"><img src="images/9.jpg" alt="Giant Robot"></a></li>
 			</ul>
 			<ul>
-				<li><a href="#i10" class="thumbnail"><img src="images/10.jpg"></a></li>
-				<li><a href="#i11" class="thumbnail"><img src="images/11.jpg"></a></li>
-				<li><a href="#i12" class="thumbnail"><img src="images/12.jpg"></a></li>
+				<li><a href="#i10" class="thumbnail"><img src="images/10.jpg" alt="Uncharted Waters"></a></li>
+				<li><a href="#i11" class="thumbnail"><img src="images/11.jpg" alt="Rubeum Knight"></a></li>
+				<li><a href="#i12" class="thumbnail"><img src="images/12.jpg" alt="Sea Dragon"></a></li>
 			</ul>
 		</div>
 	</div>
+
+	<!--Hidden full-size images that act as lightboxes-->
 	<a href="#_" class="lightbox" id="i1">
-  		<img src="images/i1.jpg">
+  		<img src="images/i1.jpg" alt="Evo">
 	</a>
 	<a href="#_" class="lightbox" id="i2">
-  		<img src="images/i2.jpg">
+  		<img src="images/i2.jpg" alt="Unicorn">
 	</a>
 	<a href="#_" class="lightbox" id="i3">
-  		<img src="images/i3.png">
+  		<img src="images/i3.png" alt="Passing Giant">
 	</a>
 	<a href="#_" class="lightbox" id="i4">
-  		<img src="images/i4.jpg">
+  		<img src="images/i4.jpg" alt="Car">
 	</a>
 	<a href="#_" class="lightbox" id="i5">
-  		<img src="images/i5.jpg">
+  		<img src="images/i5.jpg" alt="Spaceship">
 	</a>
 	<a href="#_" class="lightbox" id="i6">
-  		<img src="images/i6.png">
+  		<img src="images/i6.png" alt="Chicken">
 	</a>
 	<a href="#_" class="lightbox" id="i7">
-  		<img src="images/i7.jpg">
+  		<img src="images/i7.jpg" alt="Dragon">
 	</a>
 	<a href="#_" class="lightbox" id="i8">
-  		<img src="images/i8.png">
+  		<img src="images/i8.png" alt="Dragon Head">
 	</a>
 	<a href="#_" class="lightbox" id="i9">
-  		<img src="images/i9.jpg">
+  		<img src="images/i9.jpg" alt="Giant Robot">
 	</a>
-		<a href="#_" class="lightbox" id="i10">
-  		<img src="images/i10.jpg">
+	<a href="#_" class="lightbox" id="i10">
+  		<img src="images/i10.jpg" alt="Uncharted Waters">
 	</a>
+	<a href="#_" class="lightbox" id="i11">
+  		<img src="images/i11.png" alt="Rubeum Knight">
 	</a>
-		<a href="#_" class="lightbox" id="i11">
-  		<img src="images/i11.png">
+	<a href="#_" class="lightbox" id="i12">
+  		<img src="images/i12.jpg" alt="Sea Dragon">
 	</a>
-	</a>
-		<a href="#_" class="lightbox" id="i12">
-  		<img src="images/i12.jpg">
-	</a>
+	<!--Resume Section-->
 	<div class="section2">
 		<div class="row">
 			<h3>Resume</h3>
@@ -110,8 +122,6 @@
 				</ul>
 			</div>
 		</div>
-	<footer>
-		
-	</footer>
+	</div>
 </body>
 </html>
