Added social icons, and made outgoing links open in a new tab.

--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,12 @@
 	<div>
 		<div class="heading">
 			<h1>Ryan Van Dongen</h1>
-			<div class="icons">
+			<div class="icons"><!--Social Icons-->
 				<ul class="social">
-					<li><a href="instagram.com/ryanvandongen/" target="_blank"><img src="images/icon-ig.png" width="20" alt="Instagram"></a></li>
-					<li><a href="artstation.com/ryan" target="_blank"><img src="images/icon-as.png" width="20" alt="Artstation"></a></li>
-					<li><a href="merch.html" target="_blank"><img src="images/icon-fb.png" width="20" alt="Facebook"></a></li>
-					<li><a href="contact.html" target="_blank"><img src="images/icon-twitter.png" width="20" alt="Twitter"></a></li>
+					<li><a href="https://www.instagram.com/ryanvandongen" target="_blank"><img src="images/icon-ig.png" width="20" alt="Instagram"></a></li>
+					<li><a href="https://www.artstation.com/ryan" target="_blank"><img src="images/icon-as.png" width="20" alt="Artstation"></a></li>
+					<li><a href="https://www.facebook.com/ryan.vandongen1" target="_blank"><img src="images/icon-fb.png" width="20" alt="Facebook"></a></li>
+					<li><a href="https://twitter.com/ryanjvandongen" target="_blank"><img src="images/icon-twitter.png" width="20" alt="Twitter"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -48,7 +48,7 @@
 				<input type="submit" name="submit" class="button">
 			</form>
 			<br />
-			Or find me on <a href="https://www.instagram.com/ryanvandongen/">Instagram</a>, <a href="https://www.youtube.com/channel/UCLQk-Rgh7WLd8LrzA7SYqYg?view_as=subscriber">Youtube</a>, <a href="https://www.redbubble.com/people/ryanvandongen/portfolio">Redbubble</a>, <a href="https://www.artstation.com/ryan">Artstation</a>, <a href="https://www.facebook.com/ryan.vandongen1">Facebook</a>, and <a href="https://twitter.com/ryanjvandongen?lang=en">Twitter</a>.
+			Or find me on <a href="https://www.instagram.com/ryanvandongen/" target="_blank">Instagram</a>, <a href="https://www.youtube.com/channel/UCLQk-Rgh7WLd8LrzA7SYqYg?view_as=subscriber" target="_blank">Youtube</a>, <a href="https://www.redbubble.com/people/ryanvandongen/portfolio" target="_blank">Redbubble</a>, <a href="https://www.artstation.com/ryan" target="_blank">Artstation</a>, <a href="https://www.facebook.com/ryan.vandongen1" target="_blank">Facebook</a>, and <a href="https://twitter.com/ryanjvandongen?lang=en" target="_blank">Twitter</a>.
 		</div>
 	</div>
 	<footer>
