--- a/merch.html
+++ b/merch.html
@@ -9,12 +9,12 @@
 	<div>
 		<div class="heading">
 			<h1>Ryan Van Dongen</h1>
-			<div class="icons">
+			<div class="icons"><!--Social Icons-->
 				<ul class="social">
-					<li><a href="instagram.com/ryanvandongen/"><img src="images/icon-ig.png" width="20" alt="Instagram"></a></li>
-					<li><a href="portfolio.html"><img src="images/icon-as.png" width="20" alt="Artstation"></a></li>
-					<li><a href="merch.html"><img src="images/icon-fb.png" width="20" alt="Facebook"></a></li>
-					<li><a href="contact.html"><img src="images/icon-twitter.png" width="20" alt="Twitter"></a></li>
+					<li><a href="https://www.instagram.com/ryanvandongen" target="_blank"><img src="images/icon-ig.png" width="20" alt="Instagram"></a></li>
+					<li><a href="https://www.artstation.com/ryan" target="_blank"><img src="images/icon-as.png" width="20" alt="Artstation"></a></li>
+					<li><a href="https://www.facebook.com/ryan.vandongen1" target="_blank"><img src="images/icon-fb.png" width="20" alt="Facebook"></a></li>
+					<li><a href="https://twitter.com/ryanjvandongen" target="_blank"><img src="images/icon-twitter.png" width="20" alt="Twitter"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -35,7 +35,7 @@
 	</div>
 	<div class="section2">
 		<div class="contact">
-			<h2>Get exclusive prints, apparel, home decor, and tech cases and skins from my shop on <a href="https://www.redbubble.com/people/ryanvandongen/shop?asc=u">Redbubble</a>.</h2>
+			<h2>Get exclusive prints, apparel, home decor, and tech cases and skins from my shop on <a href="https://www.redbubble.com/people/ryanvandongen/shop?asc=u" target="_blank">Redbubble</a>.</h2>
 		</div>
 	</div>
 	<!--Section that displays clickable images of merchandise-->
@@ -50,9 +50,5 @@
 			<div class="caption"></div>
 		</div>
 	</div>
-
-	<footer>
-		
-	</footer>
 </body>
 </html>
