--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<div>
 		<div class="heading">
 			<h1>Ryan Van Dongen</h1>
-			<div class="icons">
+			<div class="icons"><!--Social Icons-->
 				<ul class="social">
-					<li><a href="index.html"><img src="images/icon-ig.png" width="20" alt="Instagram"></a></li>
-					<li><a href="portfolio.html"><img src="images/icon-as.png" width="20" alt="Artstation"></a></li>
-					<li><a href="merch.html"><img src="images/icon-fb.png" width="20" alt="Facebook"></a></li>
-					<li><a href="contact.html"><img src="images/icon-twitter.png" width="20" alt="Twitter"></a></li>
+					<li><a href="https://www.instagram.com/ryanvandongen" target="_blank"><img src="images/icon-ig.png" width="20" alt="Instagram"></a></li>
+					<li><a href="https://www.artstation.com/ryan" target="_blank"><img src="images/icon-as.png" width="20" alt="Artstation"></a></li>
+					<li><a href="https://www.facebook.com/ryan.vandongen1" target="_blank"><img src="images/icon-fb.png" width="20" alt="Facebook"></a></li>
+					<li><a href="https://twitter.com/ryanjvandongen" target="_blank"><img src="images/icon-twitter.png" width="20" alt="Twitter"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -38,7 +38,7 @@
 			<div class="wide">
 				<h3>About Me</h3>
 				<p>I am a concept artist and illustrator based in Philadelphia, PA, and currently attending Drexel 	University. </p>
-				<p>Check me out on <a href="https://www.instagram.com/ryanvandongen/">Instagram</a>, <a href="https://www.youtube.com/channel/UCLQk-Rgh7WLd8LrzA7SYqYg?view_as=subscriber">Youtube</a>, <a href="https://www.redbubble.com/people/ryanvandongen/portfolio">Redbubble</a>, <a href="https://www.artstation.com/ryan">Artstation</a>, <a href="https://www.facebook.com/ryan.vandongen1">Facebook</a>, and <a href="https://twitter.com/ryanjvandongen?lang=en">Twitter</a>.</p>
+				<p>Check me out on <a href="https://www.instagram.com/ryanvandongen/" target="_blank">Instagram</a>, <a href="https://www.youtube.com/channel/UCLQk-Rgh7WLd8LrzA7SYqYg?view_as=subscriber" target="_blank">Youtube</a>, <a href="https://www.redbubble.com/people/ryanvandongen/portfolio">Redbubble</a>, <a href="https://www.artstation.com/ryan">Artstation</a>, <a href="https://www.facebook.com/ryan.vandongen1" target="_blank">Facebook</a>, and <a href="https://twitter.com/ryanjvandongen?lang=en" target="_blank">Twitter</a>.</p>
 			</div>
 			<div class="narrowimages">
 				<img src="images/prof.jpeg" class="prof" alt="A photo of me">	
@@ -51,7 +51,7 @@
 				<h3>Portfolio</h3>
 				<h2>Recent Projects</h2>
 				<p>
-					<a href="https://www.youtube.com/watch?v=xR0_2yISfHs">See the making of the Angry Robot on Youtube</a>
+					<a href="https://www.youtube.com/watch?v=xR0_2yISfHs" target="_blank">See the making of the Angry Robot on Youtube</a>
 				</p>
 				<a href="portfolio.html" class="button">View Portfolio</a>
 			</div>
@@ -112,7 +112,7 @@
 				<h3>Contact Me</h3>
 				<h2>Get in Touch!</h2>
 				<div>
-					<a href="mailto:ryanvdon@gmail.com" class="button">Send Me an Email</a>
+					<a href="mailto:ryanvdon@gmail.com" class="button" target="_blank">Send Me an Email</a>
 				</div>
 			</div>
 		</div>
