--- a/portfolio.html
+++ b/portfolio.html
@@ -10,12 +10,12 @@
 	<div>
 		<div class="heading">
 			<h1>Ryan Van Dongen</h1>
-			<div class="icons">
+			<div class="icons"><!--Social Icons-->
 				<ul class="social">
-					<li><a href="index.html"><img src="images/icon-ig.png" width="20" alt="Instagram"></a></li>
-					<li><a href="portfolio.html"><img src="images/icon-as.png" width="20" alt="Artstation"></a></li>
-					<li><a href="merch.html"><img src="images/icon-fb.png" width="20" alt="Facebook"></a></li>
-					<li><a href="contact.html"><img src="images/icon-twitter.png" width="20" alt="Twitter"></a></li>
+					<li><a href="https://www.instagram.com/ryanvandongen" target="_blank"><img src="images/icon-ig.png" width="20" alt="Instagram"></a></li>
+					<li><a href="https://www.artstation.com/ryan" target="_blank"><img src="images/icon-as.png" width="20" alt="Artstation"></a></li>
+					<li><a href="https://www.facebook.com/ryan.vandongen1" target="_blank"><img src="images/icon-fb.png" width="20" alt="Facebook"></a></li>
+					<li><a href="https://twitter.com/ryanjvandongen" target="_blank"><img src="images/icon-twitter.png" width="20" alt="Twitter"></a></li>
 				</ul>
 			</div>
 		</div>
